# ai-playground

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
apps/basic/: README.md  main.py  requirements.txt
apps/basic/static/: index.html  script.js  style.css
notebooks/: init.ipynb  mcp-client-practice.ipynb  prompt-cache-test.ipynb  pydantic-ai-iter.ipynb
scripts/: async-basic.py  token-counting-basic.py  tool-basic.py
scripts/basic/: basic.py  rich_chatbot.py  streaming-basic.py  streaming-helper-basic.py  streamlit-chatbot-token-count-stoppable.py  streamlit-chatbot-token-count.py  streamlit_chatbot.py  tool-basic.py
scripts/fastapi/: stream.py
scripts/mcp/: README.md  client.py  streamlit-mcp-multimodal-chatbot.py  test_mcp_connection.py  test_mcp_tool_call.py  test_streamlit_mcp.py
scripts/multimodal/: pyside6_multimodal_chatbot.py  streamlit-multimodal-chatbot.py
scripts/pydantic-ai/: chat_app.html  chat_app.py  chat_app.ts  hello-world.py  image-use-local.py  image-use.py  rag.py  roulette_wheel.py  stream-codeblock.py
scripts/pydantic-ai/chat-app/: chat_app.html  chat_app.py  chat_app.ts
scripts/pydantic-ai/chat-app/static/: api.js  main.js  math.js  state.js  ui.js
scripts/pydantic-graph/: first-graph.py  veding-machine.py
src/ai_playground/: __init__.py
