[project]
name = "ai-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sangwon Lee", email = "lsw91@lgchem.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.51.0",
    "fastapi[standard]>=0.115.12",
    "mcp>=1.8.1",
    "mistune>=3.1.3",
    "notebook>=7.4.2",
    "pyside6>=6.9.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "streamlit>=1.45.1",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
